[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/base/components/scene/camera_switcher.gd" type="Script" id=1]

[node name="camera_switcher" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]

[connection signal="body_entered" from="." to="." method="player_entered"]
