[gd_scene load_steps=6 format=2]

[ext_resource path="res://managers/scene_manager/game_scene_manager.gd" type="Script" id=1]
[ext_resource path="res://database/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/base/components/scene/camera_switcher.gd" type="Script" id=3]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.133333, 0.113725, 0.113725, 1 )
fog_enabled = true
fog_color = Color( 0.0901961, 0.101961, 0.113725, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 0.0
fog_depth_end = 37.4
fog_depth_curve = 1.41421
glow_intensity = 4.38
glow_strength = 0.0
adjustment_enabled = true
adjustment_saturation = 0.59

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1, 27.8108 )

[node name="debug_room_2" type="Spatial"]
script = ExtResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
width = 130.0
height = 0.002
depth = 54.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.785986, 0.618244, 0, -0.618244, 0.785986, 0, 6.98582, 7.68229 )
light_color = Color( 1, 0.709804, 0.458824, 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

[node name="SpotLight" type="SpotLight" parent="player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 11, 0 )
light_energy = 0.784
spot_range = 16.0
spot_angle = 42.4108

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0, 0.5, -0.866025, 0, 0.866025, 0.5, 1, 0, 0, -51, 15, 0 )
current = true

[node name="Camera2" type="Camera" parent="."]
transform = Transform( -0.0636963, -0.498985, 0.864267, 0, 0.866025, 0.5, -0.997969, 0.0318482, -0.0551626, 66.8969, 15, 0 )
near = 0.01

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CameraSwitcher" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.1591, 0, 0 )
script = ExtResource( 3 )
camera_to_switch = NodePath("../Camera2")

[node name="CollisionShape" type="CollisionShape" parent="CameraSwitcher"]
shape = SubResource( 2 )
